# pass-check

./: .gitignore  README.md  docs.md  pyproject.toml
docs/: architecture.html  docs.html  index.html  reference.html
examples/: basic_usage.py
src/passguard/: __init__.py  analyzer.py  constants.py  context.py  exceptions.py  models.py
src/passguard/analysis/: charset.py  effective_entropy.py  entropy.py  mutations.py  recommendations.py
src/passguard/analysis/cracktime/: __init__.py  analyzer.py  models.py
src/passguard/analysis/dictionary/: __init__.py  analyzer.py  models.py  provider.py
src/passguard/analysis/pattern/: engine.py  keyboard.py  repeated.py  sequence.py
src/passguard/data/: common_passwords.txt
test/: test_charset.py  test_effective_entropy.py  test_intelligence.py  test_repeated_substring.py
