[project]
name = "passguard"
version = "0.1.0"
description = "Advanced password strength analyzer and security assessment library."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Lokesh" }
]

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passguard"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true